@@ -10,7 +10,8 @@
 	* fixed bug #12756: Queries for internal caching are not DBAL compatible
 	* fixed bug #8307: Missing titles in the list module in the Backend (Thanks to Georg Ringer)
 	* fixed bug #6300: tt_news - save & preview - not working with new records (Thanks to Martin Holtz)
-	* fixed bug #12760: export button in news-admin module has wrong link 
+	* fixed bug #12760: export button in news-admin module has wrong link
+	* added feature #12118: integrate field with typoscript into flexform of tt_news (Thanks to Krystian Szymukowicz)
 
 2009-11-24  Rupert Germann <rupi@gmx.li>
 	* clean-up: updated copyrights and class comments
